# xx-url

./: Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml  rust.yml
src/: env.rs  error.rs  lib.rs  request.rs
src/dns/: config.rs  hosts.rs  lookup.rs  mod.rs  name_server.rs  resolver.rs  result.rs
src/file/: mod.rs  request.rs  stream.rs
src/http/: body.rs  error.rs  mod.rs  request.rs  response.rs  stats.rs  stream.rs  transfer.rs
src/net/: conn.rs  connection.rs  mod.rs
src/tls/: certs.rs  conn.rs  connection.rs  mod.rs
src/ws/: conn.rs  consts.rs  errors.rs  handshake.rs  mod.rs  request.rs  stream.rs  transfer.rs  web_socket.rs  wire.rs
tests/: dns.rs  http.rs
