[package]
name = "xx-url"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
http = "1.1.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
resolv-conf = "0.7.0"
rustls = { version = "0.23.10", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.1.2"
url = "2.5.2"
x509-parser = "0.16.0"
rust-crypto = "0.2.36"
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
simple-dns = "0.7.0"
xx-core = { git = "https://github.com/davidzeng0/xx-core.git" }
xx-pulse = { git = "https://github.com/davidzeng0/xx-pulse.git" }

[features]
xx-doc = ["xx-core/xx-doc", "xx-pulse/xx-doc"]

[lints.rust]
elided_lifetimes_in_paths = "warn"
absolute_paths_not_starting_with_crate = "warn"
explicit_outlives_requirements = "warn"
missing_copy_implementations = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
unsafe_code = "warn"

[lints.clippy]
field_reassign_with_default = "allow"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
cast_ptr_alignment = "warn"
checked_conversions = "warn"
decimal_literal_representation = "warn"
equatable_if_let = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
ignored_unit_patterns = "warn"
impl_trait_in_params = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
large_digit_groups = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
manual_clamp = "warn"
manual_string_new = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
match_wildcard_for_single_variants = "warn"
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
mutex_atomic = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_raw_strings = "warn"
no_effect_underscore_binding = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_pub_crate = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
str_split_at_newline = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "warn"
transmute_undefined_repr = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_self = "warn"
use_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
use_debug = "warn"
multiple_unsafe_ops_per_block = "warn"
flat_map_option = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
todo = "warn"
unused_async = "warn"
wildcard_imports = "warn"
